--- a/src/styles/todo.css
+++ b/src/styles/todo.css
@@ -4,7 +4,8 @@
 
 .custom-checkbox {
     position: relative;
-    padding-left: 30px;
+    bottom: 10px;
+    padding-left: 0px;
     cursor: pointer;
     }
 
@@ -20,8 +21,8 @@
     left: 0;
     height: 20px;
     width: 20px;
-    background: linear-gradient( hsl(192, 100%, 67%) , hsl(280, 87%, 65%));
-    border: 1px solid #aaa;
+    background: transparent;
+    border: 2px solid  hsl(280, 87%, 65%);
     border-radius: 50%;
     }
 
@@ -45,6 +46,10 @@
     content: "\2713";
     color: white;
     font-size: 14px;
-    top: 3px;
-    left: 6px;
+    top: 0px;
+    left: 3px;
     }
+
+.add-btn{
+    background: linear-gradient( hsl(192, 100%, 67%) , hsl(280, 87%, 65%)) 
+}
