styled the disabled check box and text

--- a/src/styles/todolist.css
+++ b/src/styles/todolist.css
@@ -10,6 +10,12 @@
     color: transparent;
     cursor: not-allowed;
 }
-.text-overline{
+
+.achieved {
+    color: gray;
     text-decoration: line-through;
+
+}
+.checked{
+    opacity: 0.3;
 }
