implemented the drag and drop feature

--- a/src/styles/todolist.css
+++ b/src/styles/todolist.css
@@ -3,6 +3,9 @@
     transition: 0.5s opacity ease-in-out;
     
 }
+.goal{
+    /* background-color: #12ac; */
+}
 .goal:hover .remove-btn{
     opacity: 1;
 }
